--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ APP_FAKER_LOCALE=en_US
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
+SCOUT_DRIVER=database
+
 PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
