--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "php": "^8.2",
         "intervention/image": "^3.11",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/scout": "^10.14",
+        "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.6",
+        "teamtnt/laravel-scout-tntsearch-driver": "^15.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
