--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "@fullcalendar/core": "^5.11.5",
+        "@fullcalendar/daygrid": "^5.11.5",
+        "@fullcalendar/timegrid": "^5.11.5",
+        "@fullcalendar/list": "^5.11.5"
     }
 }
