--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.31",
         "laravel/scout": "^10.14",
         "laravel/tinker": "^2.9",
+        "league/csv": "^9.23",
         "livewire/livewire": "^3.6",
         "teamtnt/laravel-scout-tntsearch-driver": "^15.0"
     },
